--- a/.github/workflows/watch.yml
+++ b/.github/workflows/watch.yml
@@ -42,6 +42,6 @@ jobs:
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
-          git add data/properties.json
+          git add data/properties.json data/renov_properties.json
           git diff --staged --quiet || git commit -m "Update properties.json [skip ci]"
           git push
